--- a/src/scss/abstracts/variables.scss
+++ b/src/scss/abstracts/variables.scss
@@ -1,5 +1,5 @@
 $dark-gray: #777c7f;
-$success-bg: #365b3a;
-$wrong-bg: #854646;
-$success-bg-hover: #2b492b;
-$wrong-bg-hover: #703d3d;
+$success-bg: #76ff66;
+$success-bg-dark: #096f07;
+$wrong-bg: #ff6366;
+$wrong-bg-dark: #bf252c;
